# appendfilename

./: pyproject.toml
.github/workflows/: pytest.yml  tox.yml
appendfilename/: __init__.py
docs/: readme_pypi.md  readme_pypi.org
