
[project]
name = "appendfilename"
version = "2025.5.7"
description = "Intelligent appending text to file names, considering file extensions and file tags."
readme = "README.org"
keywords = [
    "file managing", 
    "file management",
    "files",
    "date",
    "time",
    "time-stamps"
]
classifiers=[
    "Programming Language :: Python :: 3 :: Only",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Operating System :: OS Independent",
]
authors = [
    {name="Karl Voit", email="tools@Karl-Voit.at"}
]
license = {file = "license.txt"}
dependencies = [
    "pyreadline3",
]

[project.optional-dependencies]
dev = [
    "build",
    "pytest",
]

[tools.setuptools.packages.find]
where = ["."]

[project.urls]
Homepage = "https://github.com/novoid/appendfilename"
Repository = "https://github.com/novoid/appendfilename"
Issues = "https://github.com/novoid/appendfilename/issues"

[project.scripts]
appendfilename="appendfilename:main"

[tool.poetry.scripts]
appendfilename="appendfilename:main"

[tool.poetry]
name = "appendfilename"
version = "2024.04.26.1"
description = "Handling time-stamps and date-stamps in file names"
authors = ["Karl Voit <tools@Karl-Voit.at>"]
license = "GPL v3"
readme = "README.org"

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

