
[project]
name = "appendfilename"
version = "2026.03.01.1"
description = "Intelligent appending text to file names, considering file extensions and file tags"
license = "GPL-3.0-or-later"
readme = { file = "README.org", content-type = "text/plain" }
authors = [
    { name = "Karl Voit", email = "tools@Karl-Voit.at" },
]

keywords = [
    "file managing",
    "file management",
    "files",
    "name",
    "time",
    "time-stamps"
]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent"
]
dependencies = [
    "pyreadline3>=3.5.4",
]



[project.urls]
Homepage = "https://github.com/novoid/appendfilename"

[project.scripts]
appendfilename = "appendfilename:main"

[[tool.uv.index]]
name = "appendfilename"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.setuptools.packages.find]
include = ["appendfilename*"]

[build-system]
requires = ["setuptools>=78.1.0", "wheel>=0.45.1"]
build-backend = "setuptools.build_meta"

[tool.mypy]
strict = true
ignore_missing_imports = true
