
[project]
name = "appendfilename"
version = "2026.03.01.1"
requires-python = ">=3.10"
description = "Intelligent appending text to file names, considering file extensions and file tags"
license = "GPL-3.0-or-later"
readme = { file = "README.org", content-type = "text/plain" }
authors = [
    { name = "Karl Voit", email = "tools@Karl-Voit.at" },
]

keywords = [
    "file managing",
    "file management",
    "files",
    "name",
    "time",
    "time-stamps"
]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent"
]
dependencies = [
    "pyreadline3>=3.5.4",
]



[project.urls]
Homepage = "https://github.com/novoid/appendfilename"

[project.scripts]
appendfilename = "appendfilename:main"

[[tool.uv.index]]
name = "appendfilename"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.setuptools.packages.find]
include = ["appendfilename*"]

[build-system]
requires = ["setuptools>=78.1.0", "wheel>=0.45.1"]
build-backend = "setuptools.build_meta"

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.pytest]
minversion = "9.0"
addopts = ["-ra"]
strict = true
testpaths = [
  "tests"
]
markers = [
  "default:        test appendfilename's default string insertion",
  "prepend:        test appendfilename's optional -p/--prepend flag",
  "smart_prepend:  test appendfilename's optional --smart-prepend flag",
]

